examples/valid/infinit_loop.lama
int i = 1 ;
bool b = true ;
while (i > 0) {
    int i = 0;
    print i ;
}
print b ;