examples/invalid/decrement.lama
int a;
a = 0 ;
int res = a -- ;
res = -- a;
print res ;

bool b = true;
int exc = b ++ ;
print exc ;